--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://MenassieErmias.github.io/travel-app",
+  "homepage": "https://menassieermias.github.io/travel-app",
   "name": "travel-site",
   "version": "0.1.0",
   "private": true,
